src/objects/Expense_Card_Transaction_Item__c.object
<CustomObject>
    <description>Allows for combining card transactions into a single expense</description>
    <fields>
        <fullName>Card_Transaction_Charge_Type__c</fullName>
        <description>Charge type of the associated card transaction at creation</description>
        <inlineHelpText>Charge type of the associated card transaction at creation</inlineHelpText>
        <label>Card Transaction Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company,</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Transaction_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid indicator of the associated card transaction at creation</description>
        <label>Card Transaction Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Card_Transaction_Item_18_Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Card Transaction Item 18-Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>Parent Expense Record</description>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Expense Card Transaction Items</relationshipLabel>
        <relationshipName>Expense_Card_Transaction_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Billing_Currency_c__c</fullName>
        <formula>PSA_Card_Transaction__r.PSA_Amount_in_Billing_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Amount in Billing Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_in_Original_Currency__c</fullName>
        <formula>if (PSA_Card_Transaction_Item__c != null, 
PSA_Card_Transaction_Item__r.PSA_Amount_in_Original_Currency__c,
PSA_Card_Transaction__r.PSA_Amount_in_Original_Currency__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Amount in Original Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSA Card Transaction Item</label>
        <referenceTo>PSA_Card_Transaction_Item__c</referenceTo>
        <relationshipLabel>Expense Card Transaction Items</relationshipLabel>
        <relationshipName>Expense_Card_Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Card_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Card transaction making up an expense</description>
        <inlineHelpText>Card transaction making up an expense</inlineHelpText>
        <label>PSA Card Transaction</label>
        <referenceTo>PSA_Card_Transaction__c</referenceTo>
        <relationshipLabel>Expense Card Transaction Items</relationshipLabel>
        <relationshipName>Expense_Card_Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Charge_Type__c</fullName>
        <formula>TEXT(PSA_Card_Transaction__r.PSA_Charge_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Remaining_Transaction_Amount__c</fullName>
        <formula>PSA_Card_Transaction__r.PSA_Remaining_Transaction_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSA Remaining Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Card Transaction Item</label>
    <nameField>
        <displayFormat>ECTI-{00000}</displayFormat>
        <label>Expense Card Transaction Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Card Transaction Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>